[package]
authors = ["Denis <denis.boghiu@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "f407"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1"
cortex-m-semihosting = "0.5"
panic-rtt-core = "0.2"
stm32f4xx-hal = { version = "0.17", features = ["rt", "stm32f407"] }
rtic-monotonic = "1"
embedded-hal = "0.2.7"
lcd-ili9341 = { git = "https://github.com/denisbog/rust-lcd-ili9341" }
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-graphics-core = "0.4.0"
display-interface = "0.4.1"
rtt-target = "0.4.0"
defmt = "1.0"
defmt-rtt = "1.0"

[[bin]]
name = "f407"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
