[package]
authors = ["Denis <denis.boghiu@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "f407"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"
semihosting = "0.1.20"
defmt = "1.0"
defmt-rtt = "1.0"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-probe = { version = "1.0", features = ["print-defmt"] }
ili9341 = "0.6.0"
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
heapless = "0.9.2"
embedded-graphics-framebuf = "0.5.0"

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f407", "fsmc_lcd"]

[[bin]]
name = "f407"
test = false
bench = false

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2
